Update Contacts - Fix Swagger - Delete Users
