# routes/contacts.js
@@ -1,0 +1,11 @@
+const router = require('express').Router();
+
+const contactsControllers = require('../controllers/contacts');
+
+router.get('/', contactsControllers.getAll);
+router.get('/:id', contactsControllers.getSingle);
+router.post('/', contactsControllers.createContact);
+router.put('/:id', contactsControllers.updateContact);
+router.delete('/:id', contactsControllers.deleteContact);
+
+module.exports = router;
