# routes/users.js
@@ -1,11 +1,0 @@
-const router = require('express').Router();
-
-const usersControllers = require('../controllers/users');
-
-router.get('/', usersControllers.getAll);
-router.get('/:id', usersControllers.getSingle);
-router.post('/', usersControllers.createUser);
-router.put('/:id', usersControllers.updateUser);
-router.delete('/:id', usersControllers.deleteUser);
-
-module.exports = router;
